tests/ui/parser/recover/recover-parens-around-match-arm-head.stderr
error: expected one of `)`, `,`, `...`, `..=`, `..`, or `|`, found keyword `if`
  --> $DIR/recover-parens-around-match-arm-head.rs:4:12
   |
LL |         (0 if true) => {
   |            ^^ expected one of `)`, `,`, `...`, `..=`, `..`, or `|`

error: aborting due to previous error

